homepage foundations done

--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
             <img class="bear" src="images/bearCooking.gif" alt="">
             <h1>Beary Delicious Recipes</h1>
             <hr>
-            <a href="recipes/burger.html">Burger</a>
+            <div class="links">
+                <a href="recipes/burger.html"><span class="fas fa-angle-right"></span> Garlic Butter Steak</a>
+            </div>
+            <div class="links">
+                <a href="recipes/burger.html"><span class="fas fa-angle-right"></span> Pan Seared Steak</a>
+            </div>
+            <div class="links">
+                <a href="recipes/burger.html"><span class="fas fa-angle-right"></span> Ribeye Steak</a>
+            </div>
         </div>
     </main>
+    <script src="https://kit.fontawesome.com/4889c17d41.js" crossorigin="anonymous"></script>
 </body>
 </html>
