--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="icon" href="images/bearycute.jpg">
 </head>
 <body>
+    <header>
+        <nav>
+            <img src="images/bearycute.jpg" alt="bearrr" class="bearicon">
+        </nav>
+    </header>
     <main>
         <div class="introduction">
             <img class="bear" src="images/bearCooking.gif" alt="">
             <h1>Beary Delicious Recipes</h1>
             <hr>
             <div class="links">
-                <a href="recipes/burger.html"><span class="fas fa-angle-right"></span> Garlic Butter Steak</a>
+                <a href="recipes/butter.html"><span class="fas fa-angle-right"></span> Garlic Butter Steak</a>
             </div>
             <div class="links">
-                <a href="recipes/burger.html"><span class="fas fa-angle-right"></span> Pan Seared Steak</a>
+                <a href="recipes/pan.html"><span class="fas fa-angle-right"></span> Pan Seared Steak</a>
             </div>
             <div class="links">
-                <a href="recipes/burger.html"><span class="fas fa-angle-right"></span> Ribeye Steak</a>
+                <a href="recipes/ribeye.html"><span class="fas fa-angle-right"></span> Ribeye Steak</a>
             </div>
         </div>
     </main>
