added suprise bear

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="icon" href="images/bearycute.jpg">
 </head>
 <body>
-    <header>
-        <nav>
-            <img src="images/bearycute.jpg" alt="bearrr" class="bearicon">
-        </nav>
-    </header>
+    <aside>
+        <h1 class="intro-odin">ODIN RECIPES</h1>
+        <img src="images/bearycute.jpg" alt="bearrr" class="bearicon">
+    </aside>
     <main>
         <div class="introduction">
+
             <img class="bear" src="images/bearCooking.gif" alt="">
             <h1>Beary Delicious Recipes</h1>
             <hr>
