--- a/recipes/butter.html
+++ b/recipes/butter.html
@@ -13,5 +13,50 @@
         <h1 class="intro-odin">ODIN RECIPES</h1>
         <img src="../images/bearycute.jpg" alt="bearrr" class="bearicon">
     </aside>
+    <main>
+            <h2>Recipe</h2>
+            <h3>"Garlic Butter Steak"</h3>
+            <table>
+                <tr>
+                    <th>Ingredients</th>
+                </tr>
+                <tr>
+                    <td>2 tablespoons butter, softened, divided</td>
+                </tr>
+                <tr>
+                    <td>1 teaspoon minced fresh parsley</td>
+                </tr>
+                <tr>
+                    <td>1/2 teaspoon minced garlic</td>
+                </tr>
+                <tr>
+                    <td>1/4 teaspoon reduced-sodium soy sauce</td>
+                </tr>
+                <tr>
+                    <td>1 beef flat iron steak or boneless top sirloin steak (3/4 pound)</td>
+                </tr>
+                <tr>
+                    <td>1/8 teaspoon salt</td>
+                </tr>
+                <tr>
+                    <td>1/8 teaspoon pepper</td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <th>Directions</th>
+                </tr>
+                <tr>
+                    <td>Mix 1 tablespoon butter with parsley, garlic and soy sauce.</td>
+                </tr>
+                <tr>
+                    <td>Sprinkle steak with salt and pepper. In a large skillet, heat remaining 
+                        butter over medium heat. Add steak; cook until meat reaches desired doneness 
+                        (for medium-rare, a thermometer should read 135°; medium, 140°; medium-well, 145°), 
+                        4-7 minutes per side. Serve with garlic butter.</td>
+                </tr>
+            </table>
+    </main>
+    <a href="../index.html" class="go-back">back</a>
 </body>
 </html>
