--- a/recipes/butter.html
+++ b/recipes/butter.html
@@ -50,9 +50,9 @@
                     <td>Mix 1 tablespoon butter with parsley, garlic and soy sauce.</td>
                 </tr>
                 <tr>
-                    <td>Sprinkle steak with salt and pepper. In a large skillet, heat remaining 
-                        butter over medium heat. Add steak; cook until meat reaches desired doneness 
-                        (for medium-rare, a thermometer should read 135°; medium, 140°; medium-well, 145°), 
+                    <td>Sprinkle steak with salt and pepper. In a large skillet, heat remaining <br>
+                        butter over medium heat. Add steak; cook until meat reaches desired doneness <br> 
+                        (for medium-rare, a thermometer should read 135°; medium, 140°; medium-well, 145°), <br> 
                         4-7 minutes per side. Serve with garlic butter.</td>
                 </tr>
             </table>
