--- a/recipes/pan.html
+++ b/recipes/pan.html
@@ -21,25 +21,16 @@
                 <th>Ingredients</th>
             </tr>
             <tr>
-                <td>2 tablespoons butter, softened, divided</td>
+                <td>2 strip steaks (each about 1 inch thick), room temperature</td>
             </tr>
             <tr>
-                <td>1 teaspoon minced fresh parsley</td>
+                <td>Kosher salt and freshly ground pepper</td>
             </tr>
             <tr>
-                <td>1/2 teaspoon minced garlic</td>
+                <td>1 teaspoon unsalted butter</td>
             </tr>
             <tr>
-                <td>1/4 teaspoon reduced-sodium soy sauce</td>
-            </tr>
-            <tr>
-                <td>1 beef flat iron steak or boneless top sirloin steak (3/4 pound)</td>
-            </tr>
-            <tr>
-                <td>1/8 teaspoon salt</td>
-            </tr>
-            <tr>
-                <td>1/8 teaspoon pepper</td>
+                <td>Simple Steak Sauce, optional</td>
             </tr>
         </table>
         <table>
@@ -47,13 +38,28 @@
                 <th>Directions</th>
             </tr>
             <tr>
-                <td>Mix 1 tablespoon butter with parsley, garlic and soy sauce.</td>
+                <td>Heat a large heavy-bottomed skillet (preferably cast iron) over high 5 minutes. <br>
+                    Generously season steaks with salt and pepper. <br>
+                    Add 1/2 teaspoon butter to pan, then immediately top with one steak.</td>
             </tr>
             <tr>
-                <td>Sprinkle steak with salt and pepper. In a large skillet, heat remaining 
-                    butter over medium heat. Add steak; cook until meat reaches desired doneness 
-                    (for medium-rare, a thermometer should read 135°; medium, 140°; medium-well, 145°), 
-                    4-7 minutes per side. Serve with garlic butter.</td>
+                <td>Repeat with remaining 1/2 teaspoon butter and steak. <br>
+                    Cook without moving steaks until a golden brown crust forms, 3 to 4 minutes. <br>
+                    Turn and cook 2 minutes more for rare, or 3 to 4 minutes more for medium-rare. <br>
+                    Transfer to a cutting board and let rest 5 minutes. <br>
+                    Slice steaks against the grain; serve with sauce, if desired.</td>
+            </tr>
+            <tr>
+                <td>Heat a 10- or 12-inch cast-iron skillet over high heat. <br>
+                    Season the steaks liberally with salt and pepper. Seconds before adding a steak, <br>
+                    drop 1/2 teaspoon of the butter into the pan and immediately top with the steak. <br>
+                    Repeat with the remaining steak.</td>
+            </tr>
+            <tr>
+                <td>Sear for 3 minutes without moving the steak (to form a crust).  <br>
+                    Turn and cook for 2 minutes for rare or 3 to 4 for medium rare. <br>
+                    Remove the steaks from the pan and let them rest on a board or platter <br> 
+                    for a few minutes before serving.</td>
             </tr>
         </table>
 </main>
