--- a/recipes/ribeye.html
+++ b/recipes/ribeye.html
@@ -22,25 +22,22 @@
             <th>Ingredients</th>
         </tr>
         <tr>
-            <td>2 tablespoons butter, softened, divided</td>
+            <td>Ribeye Steak</td>
         </tr>
         <tr>
-            <td>1 teaspoon minced fresh parsley</td>
+            <td>Salt and Pepper</td>
         </tr>
         <tr>
-            <td>1/2 teaspoon minced garlic</td>
+            <td>Olive Oil</td>
         </tr>
         <tr>
-            <td>1/4 teaspoon reduced-sodium soy sauce</td>
+            <td>Butter</td>
         </tr>
         <tr>
-            <td>1 beef flat iron steak or boneless top sirloin steak (3/4 pound)</td>
+            <td>Garlic</td>
         </tr>
         <tr>
-            <td>1/8 teaspoon salt</td>
-        </tr>
-        <tr>
-            <td>1/8 teaspoon pepper</td>
+            <td>Fresh Rosemary and Thyme</td>
         </tr>
     </table>
     <table>
@@ -48,13 +45,22 @@
             <th>Directions</th>
         </tr>
         <tr>
-            <td>Mix 1 tablespoon butter with parsley, garlic and soy sauce.</td>
+            <td>Let Steak Rest: To begin, let the steak rest for 30 minutes to come to room temperature. Salt and pepper to taste.</td>
         </tr>
         <tr>
-            <td>Sprinkle steak with salt and pepper. In a large skillet, heat remaining 
-                butter over medium heat. Add steak; cook until meat reaches desired doneness 
-                (for medium-rare, a thermometer should read 135°; medium, 140°; medium-well, 145°), 
-                4-7 minutes per side. Serve with garlic butter.</td>
+            <td>Prep Skillet and Sear: Next, in a medium sized skillet over <br>
+                medium high heat add the olive oil. Once it starts to smoke <br>
+                add the steaks to the skillet. Sear on all of the sides until <br>
+                they have a golden brown crust.</td>
+        </tr>
+        <tr>
+            <td>Add Butter and Herbs: Add the butter and let melt in the skillet. <br>
+                Add in the garlic and fresh sprigs.</td>
+        </tr>
+        <tr>
+            <td>Reduce Heat and Continue Cooking: Reduce the heat to medium and <br>
+                let them cook until they reach the desired internal temperature. Lastly, <br>
+                spoon the butter over the steak while they are cooking.</td>
         </tr>
     </table>
 </main>
