Add height and width for image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <aside>
         <h1 class="intro-odin">ODIN RECIPES</h1>
-        <img src="images/bearycute.jpg" alt="bearrr" class="bearicon">
+        <img src="images/bearycute.jpg" alt="bearrr" class="bearicon" height="266px" width="480px">
     </aside>
     <main>
         <div class="introduction">
