--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <aside>
         <h1 class="intro-odin">ODIN RECIPES</h1>
-        <img src="images/bearycute.jpg" alt="bearrr" class="bearicon" height="266px" width="480px">
+        <img src="images/bearycute.jpg" alt="bearrr" class="bearicon" >
     </aside>
     <main>
         <div class="introduction">
 
-            <img class="bear" src="images/bearCooking.gif" alt="">
+            <img class="bear" src="images/bearCooking.gif" alt="white bear" height="266px" width="480px">
             <h1>Beary Delicious Recipes</h1>
             <hr>
             <div class="links">
